fixed data issue with new user and CSS overflow

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -40,7 +40,5 @@
   .category {
     margin-top: 5%;
   }
-  main {
-    overflow: hidden;
-  }
+  
 }
